# personal-finances

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: personal_finance_analysis.ipynb  spending_data_v0.ipynb
src/: .env.sample  classify.py  csv_reader.py  finance_cleaner.py  main.py  openrouter.py  rules_engine.py  spending_data_v0.ipynb  spending_data_v1.ipynb
src/ai slop/: finance_cleaner.py  openrouter.py  rules_engine.py  spending_data_v1.ipynb
